# nex-ai

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/nex/: __init__.py  agent.py  api_client.py  cli.py  config.py  context.py  exceptions.py  planner.py  reviewer.py  safety.py  test_runner.py
src/nex/indexer/: __init__.py  index.py  parser.py  scanner.py
src/nex/memory/: __init__.py  decisions.py  errors.py  project.py
src/nex/tools/: __init__.py  file_ops.py  git_ops.py  search.py  shell.py
tests/: conftest.py  test_agent.py  test_chat.py  test_cli.py  test_context.py  test_errors.py  test_indexer.py  test_memory.py  test_rate_limiter.py  test_safety.py  test_test_runner.py  test_tools.py
