[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexcoder"
version = "0.1.3"
description = "The coding agent that remembers — AI coding assistant with persistent memory and error learning."
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Nex AI Contributors" }]
keywords = ["ai", "coding-agent", "cli", "anthropic", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "anthropic>=0.40.0",
    "typer[all]>=0.15.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
    "gitpython>=3.1.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "build>=1.0.0",
]

[project.scripts]
nex = "nex.cli:app"

[project.urls]
Homepage = "https://github.com/nex-ai/nex-ai"
Repository = "https://github.com/nex-ai/nex-ai"

[tool.hatch.build.targets.wheel]
packages = ["src/nex"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "UP", "N", "S", "B", "A", "C4",
    "SIM", "TCH", "ICN", "PIE", "PT", "RSE", "RET", "SLF",
    "ARG", "ERA", "PGH", "PLC", "PLE", "PLR", "PLW", "TRY",
    "FLY", "PERF", "RUF",
]
ignore = [
    "S101", "TRY003", "S603", "S607", "S110",
    "TC001", "TC002", "TC003",
    "PLR0912", "PLR0913", "PLR0915", "PLR0911", "PLR2004",
    "PLC0415", "TRY300", "SIM105", "PERF401",
    "PIE810", "SIM103", "B904",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "F841", "E501", "SLF001"]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "git.*",
    "tree_sitter.*",
    "tree_sitter_python.*",
    "tree_sitter_javascript.*",
    "tree_sitter_typescript.*",
    "anthropic.*",
    "typer.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nex.cli"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
